[package]
name = "diary_chain"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
chrono = "0.4"
chrono-tz = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
